--- a/app/src/main/res/layout/weight_activity.xml
+++ b/app/src/main/res/layout/weight_activity.xml
@@ -18,5 +18,5 @@
             android:id="@+id/finishBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="setWeights"/>
+            android:onClick="setWeights" android:textSize="10sp" android:background="@drawable/button_bg"/>
 </android.support.constraint.ConstraintLayout>
