--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
             android:onClick="startWorkout"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/button_bg"/>
     <Button
             android:text="Day 2"
             android:onClick="startWorkout"
@@ -23,7 +24,7 @@
             android:id="@+id/day2Workout" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/day1Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" android:background="@drawable/button_bg"/>
     <Button
             android:text="Day 3"
             android:onClick="startWorkout"
@@ -32,7 +33,7 @@
             android:id="@+id/day3Workout" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/day2Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" android:background="@drawable/button_bg"/>
     <Button
             android:text="Day 4"
             android:onClick="startWorkout"
@@ -41,9 +42,9 @@
             android:id="@+id/day4Workout" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/day3Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" android:background="@drawable/button_bg"/>
     <Button
-            android:text="View Previous Workouts"
+            android:text="Previous"
             android:onClick="viewPrevious"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,5 +52,5 @@
             app:layout_constraintTop_toBottomOf="@+id/day4Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-    />
+            android:background="@drawable/button_bg" android:textSize="14sp"/>
 </android.support.constraint.ConstraintLayout>
