--- a/app/src/main/res/layout/day4_activity.xml
+++ b/app/src/main/res/layout/day4_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent" android:id="@+id/mainlayout"
                                              android:background="@android:color/darker_gray">
@@ -13,7 +12,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="5dp" android:id="@+id/constraintLayout"
-            android:background="@android:color/background_light">
+            android:background="@android:color/background_light" android:paddingBottom="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -88,7 +87,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="5dp" android:id="@+id/constraintLayout2"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:paddingBottom="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -166,7 +165,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="5dp" android:id="@+id/constraintLayout3"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" android:paddingBottom="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -244,7 +243,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="5dp" android:id="@+id/constraintLayout4"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" android:paddingBottom="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -322,7 +321,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="5dp" android:id="@+id/constraintLayout5"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" android:paddingBottom="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -400,7 +399,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="5dp" android:id="@+id/constraintLayout6"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" android:paddingBottom="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -474,32 +473,35 @@
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
-            android:background="@android:color/background_light">
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            android:background="@android:color/background_light" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">
 
         <Button
                 android:text="Set Weights"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/setWgtBtn"
                 android:onClick="setWeight"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:background="@drawable/button_bg"
-                android:textSize="10sp"/>
+                android:background="@drawable/button_bg"
+                android:textSize="10sp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
+                app:layout_constraintStart_toEndOf="@+id/startTimerBtn" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"/>
         <Button
                 android:text="Finish Workout"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/finishWktBtn"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="32dp"
                 android:onClick="finishWorkout"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="10sp"
                 android:background="@drawable/button_bg"/>
         <TextView
                 android:text="30s"
@@ -507,17 +509,21 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/timerTV"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp" android:textSize="30sp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginStart="16dp" android:textSize="36sp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/setWgtBtn"/>
         <Button
                 android:text="Start Timer"
 
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/startTimerBtn"
-                app:layout_constraintStart_toEndOf="@+id/timerTV" android:layout_marginStart="12dp"
-                android:onClick="startTimer" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:background="@drawable/button_bg"
-                android:textSize="10sp"/>
+                android:onClick="startTimer"
+                android:background="@drawable/button_bg"
+                android:textSize="10sp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/setWgtBtn"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
