--- a/app/src/main/res/layout/day2_activity.xml
+++ b/app/src/main/res/layout/day2_activity.xml
@@ -392,15 +392,14 @@
         />
     </android.support.constraint.ConstraintLayout>
 
-
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            android:background="@android:color/background_light" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+            android:background="@android:color/background_light"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
 
         <Button
                 android:text="Set Weights"
@@ -412,16 +411,17 @@
                 android:textSize="10sp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
                 app:layout_constraintStart_toEndOf="@+id/startTimerBtn" app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
         <Button
                 android:text="Finish Workout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/finishWktBtn"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="8dp"
                 android:onClick="finishWorkout"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textSize="10sp"
                 android:background="@drawable/button_bg"/>
@@ -446,6 +446,7 @@
                 android:textSize="10sp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/setWgtBtn"/>
+                app:layout_constraintEnd_toStartOf="@+id/setWgtBtn" android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
