--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
             android:background="@drawable/button_bg"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"
             android:textSize="18sp"/>
     <Button
             android:text="Day 2"
@@ -27,7 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp" android:background="@drawable/button_bg"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/day1Workout"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/day1Workout"
             android:textSize="18sp"/>
     <Button
             android:text="Day 3"
@@ -38,7 +38,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp" android:background="@drawable/button_bg"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/day2Workout"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/day2Workout"
             android:textSize="18sp"/>
     <Button
             android:text="Day 4"
@@ -49,7 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp" android:background="@drawable/button_bg"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/day3Workout"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/day3Workout"
             android:textSize="18sp"/>
     <Button
             android:text="Previous"
@@ -64,10 +64,9 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/freeweights"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/weights"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView4"
-            android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"/>
 </android.support.constraint.ConstraintLayout>
