Big fixes, changed package name.

--- a/app/src/main/res/layout/day3_activity.xml
+++ b/app/src/main/res/layout/day3_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="match_parent" android:id="@+id/mainlayout"
                                              android:background="@android:color/darker_gray">
 
@@ -565,9 +565,8 @@
                 android:background="@drawable/button_bg"
                 android:textSize="18sp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
-                app:layout_constraintStart_toEndOf="@+id/startTimerBtn" app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"/>
+                app:layout_constraintStart_toEndOf="@+id/timerTV" android:layout_marginStart="8dp"/>
         <Button
                 android:text="Finish Workout"
                 android:layout_width="0dp"
@@ -585,11 +584,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/timerTV"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp" android:textSize="36sp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/setWgtBtn"/>
+                android:textSize="36sp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
+                app:layout_constraintStart_toEndOf="@+id/startTimerBtn" android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/setWgtBtn"/>
         <Button
                 android:text="Start Timer"
 
@@ -600,8 +599,8 @@
                 android:background="@drawable/button_bg"
                 android:textSize="18sp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/finishWktBtn"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/setWgtBtn" android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/timerTV" android:layout_marginEnd="8dp"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
