--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,64 +9,71 @@
     <Button
             android:text="Day 1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:id="@+id/day1Workout"
             android:onClick="startWorkout"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp"
             android:background="@drawable/button_bg"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/day2Workout" android:layout_marginBottom="8dp"
+    />
     <Button
             android:text="Day 2"
             android:onClick="startWorkout"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:id="@+id/day2Workout"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/button_bg"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/day1Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:background="@drawable/button_bg"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/day1Workout"
-            android:textSize="18sp"/>
+            android:layout_marginStart="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/day3Workout" android:layout_marginBottom="8dp"/>
     <Button
             android:text="Day 3"
             android:onClick="startWorkout"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:id="@+id/day3Workout"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/button_bg"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/day2Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:background="@drawable/button_bg"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/day2Workout"
-            android:textSize="18sp"/>
+            android:layout_marginStart="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/day4Workout" android:layout_marginBottom="8dp"/>
     <Button
             android:text="Day 4"
             android:onClick="startWorkout"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:id="@+id/day4Workout"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/button_bg"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/day3Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" android:background="@drawable/button_bg"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/day3Workout"
-            android:textSize="18sp"/>
+            android:layout_marginStart="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/previousWorkout" android:layout_marginBottom="8dp"/>
     <Button
             android:text="Previous"
             android:onClick="viewPrevious"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:id="@+id/previousWorkout"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/button_bg" android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/day4Workout" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
-            android:background="@drawable/button_bg" android:textSize="18sp" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"/>
     <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content" app:srcCompat="@drawable/weights"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView4"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="32dp"
-            android:layout_marginStart="32dp"/>
+            android:id="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/day1Workout"/>
 </android.support.constraint.ConstraintLayout>
